k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: highpay
  labels:
    app.kubernetes.io/name: highpay
